Background pic. Fixed hand not showing correct turn when playing new game or resetting game.

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,9 @@
 }
 
 body {
-  background-color: rgba(50,50,50,0.5);
+  /*background-color: rgba(50,50,50,0.5);*/
+  background-image: url('../images/bg.jpg');
+  background-size: cover;
   display: flex;
   flex-direction: column;
   min-height: 100vh;
@@ -33,14 +35,15 @@ body {
   margin: 0 auto;
   padding: 5px;
   width: 50vw;
-  background-color: white;
+  background-color: rgba(255,255,255,0.7);
   flex-grow: 1;
+  border: 1px solid grey;
 }
 
 #playerBar {
   position: relative;
   border: 1px solid black;
-  background-color: rgba(51, 172,145, 1);
+  /*background-color: rgba(51, 172,145, 1);*/
   width: 100%;
   height: 10vh;
   text-align: justify;
@@ -50,16 +53,21 @@ body {
   display: inline-block;
   position: relative;
   width: 40%;
-  background-color: rgba(51, 172,145, 1);
+  /*background-color: rgba(51, 172,145, 1);*/
   height: 100%;
   line-height: 10vh;
   text-align: justify;
+}
+
+#p1 {
+  background: linear-gradient(to left, rgba(34,51,99,1) 0%, #7db9e8 100%);
 }
 
 #p2 {
   direction: rtl;
   position: absolute;
   right: 0px;
+  background: linear-gradient(to right, rgba(34,51,99,1) 0%, #7db9e8 100%);
 }
 
 #p1 .name, #p2 .name{
@@ -98,10 +106,11 @@ body {
 
 #score {
   display: inline-block;
+  position: absolute;
   width: 20%;
   height: 100%;
   vertical-align: top;
-  background-color: black;
+  background-color: rgba(34,51,99,1);
   color: white;
   text-align: center;
   line-height: 10vh;
